fix: generate empty constructor if none found